test/sema/generic-arg-infer-fail.delta
// RUN: %check_errors %not %delta -typecheck %s

void foo<T>() { }

// CHECK: [[@LINE+1]]:18: error: can't infer generic parameters, please specify them explicitly
void main() { foo() }
